--- a/shoppingapp/src/style.css
+++ b/shoppingapp/src/style.css
@@ -1,1 +1,43 @@
 
+/*============================================================HOME===========================================================================*/
+#carddata{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-top: 40px;
+}
+#img{
+    height: 300px;
+    width: 300px;
+    
+}
+
+#card{
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    border: none;
+    background-color:whitesmoke;
+    
+}
+.cartbtn{
+  background-color: black;
+  color: aliceblue;
+}
+ .cartbtn:hover{
+  background-color: aliceblue;
+  color: black;
+}
+#card {
+  transition: transform 0.3s ease;
+  transform-style: preserve-3d;
+  cursor: pointer;
+}
+
+#card:hover {
+  transform: perspective(600px) translateZ(20px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+/*==========================================================================================================================================*/
