--- a/shoppingapp/src/style.css
+++ b/shoppingapp/src/style.css
@@ -35,4 +35,22 @@
   transform: perspective(600px) translateZ(20px);
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
-/*==========================================================================================================================================*/
+/*====================================================PAGINATION======================================================================================*/
+.pagin{
+ background-color: rgb(113, 176, 215);
+ height: 50px;
+ padding: 1rem;
+}
+ul {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    gap: 30px;
+    color: aliceblue;
+    
+}
+ul li{
+    text-decoration: none;
+    color: aliceblue;
+}
+/*============================================================================================================================================*/
