--- a/shoppingapp/src/style.css
+++ b/shoppingapp/src/style.css
@@ -2,16 +2,14 @@
 /*============================================================HOME===========================================================================*/
 #carddata{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
-    gap: 40px;
     margin-top: 40px;
 }
 #card{
-    width: 300px;
+    width: 280px;
     display: flex;
     justify-content: center;
-    gap: 50px;
     border: none;
     padding: 1rem;
     background-color:whitesmoke;
