--- a/shoppingapp/src/style.css
+++ b/shoppingapp/src/style.css
@@ -1,4 +1,8 @@
-
+/*===============================================================NAVBAR======================================================================*/
+.me-auto{
+    margin-left: 30%;
+    
+}
 /*============================================================HOME===========================================================================*/
 #carddata{
     display: flex;
@@ -72,5 +76,4 @@ ul li:hover {
     border: none;
     padding: 1rem;
     background-color: whitesmoke;
-    
 }
