--- a/coinapp/src/style.css
+++ b/coinapp/src/style.css
@@ -1,13 +1,44 @@
 
 #counter{
     width: 400px;
-    height: 200px;
+    height: 250px;
     background-color: lightgray;
-    padding: 1rem;
+    padding: 1.4rem;
     margin: 3rem;
     margin-left: 33%;
+    box-shadow: 0 8px 16px rgba(148, 145, 145, 0.2);
+}
+.coin{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 1px solid black;
+    background-color: darkgray;
+    padding: 0.4rem;
+    text-align: center;
 }
 .count{
     display: flex;
     gap: 20px;
+}
+#btn1{
+    background-color: cadetblue;
+    padding: 0.3rem;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+#btn2{
+    background-color: rgb(94, 121, 122);
+    padding: 0.3rem;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+#btn3{
+    background-color: rgba(110, 143, 145, 0.884);
+    padding: 0.3rem;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+.btn{
+    padding: 0.5rem;
+    background-color: crimson;
+    border: none;
+    color: aliceblue;
 }
