--- a/coinapp/src/style.css
+++ b/coinapp/src/style.css
@@ -9,13 +9,14 @@
     box-shadow: 0 8px 16px rgba(148, 145, 145, 0.2);
 }
 .coin{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 55px;
     border-radius: 50%;
-    border: 1px solid black;
-    background-color: darkgray;
+    /* border: 1px solid black; */
+    background-color: aliceblue;
     padding: 0.4rem;
     text-align: center;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2)
 }
 .count{
     display: flex;
@@ -41,4 +42,5 @@
     background-color: crimson;
     border: none;
     color: aliceblue;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2)
 }
