--- a/coinapp/src/style.css
+++ b/coinapp/src/style.css
@@ -2,7 +2,7 @@
 #counter{
     width: 400px;
     height: 250px;
-    background-color: lightgray;
+    background-color: aliceblue;
     padding: 1.4rem;
     margin: 3rem;
     margin-left: 33%;
@@ -13,7 +13,7 @@
     height: 55px;
     border-radius: 50%;
     /* border: 1px solid black; */
-    background-color: aliceblue;
+    background-color: linen;
     padding: 0.4rem;
     text-align: center;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2)
@@ -23,17 +23,17 @@
     gap: 20px;
 }
 #btn1{
-    background-color: cadetblue;
+    background-color: lightcyan;
     padding: 0.3rem;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 #btn2{
-    background-color: rgb(94, 121, 122);
+    background-color: lightgray;
     padding: 0.3rem;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 #btn3{
-    background-color: rgba(110, 143, 145, 0.884);
+    background-color: lightsteelblue;
     padding: 0.3rem;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
