--- a/coinapp/src/style.css
+++ b/coinapp/src/style.css
@@ -2,7 +2,7 @@
 #counter{
     width: 400px;
     height: 250px;
-    background-color: rgb(188, 197, 198);
+    /* background-color: rgb(188, 197, 198); */
     padding: 1.4rem;
     margin: 3rem;
     margin-left: 33%;
